--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -6,8 +6,7 @@
 
 .pagination-container button {
   border: none;
-  background-color: white;
-  box-shadow: 0.25px 0.25px rgba(0, 0, 0, 0.25);
+  background: none;
   padding: 4px;
   cursor: pointer;
   border-radius: 2px;
