--- a/src/components/Favdex.css
+++ b/src/components/Favdex.css
@@ -3,6 +3,7 @@
 }
 
 .favdex-header {
+    color: white;
     display: flex;
     flex-direction: row;
     justify-content:flex-start;
@@ -17,6 +18,7 @@
 }
 
 .favdex-total {
+    font-weight: bold;
     font-size: 30px;
     padding: 10px;
 }
