--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -3,6 +3,8 @@
 }
 
 .pokedex-header {
+  color: white;
+  width: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -17,11 +19,11 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
-@media screen and (max-width: 509px) {
+@media screen and (max-width: 361px) {
   .pokedex-body {
-    align-self:auto;
+    align-self:flex-start;
   }
   .pokedex-header {
-    width: 480px;
+    width: auto;
   }
 }
