--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -1,43 +1,46 @@
 .searchbar-container {
     height: auto;
     display: flex;
-    margin: 0px, auto;
-    padding: 0 20px;
-    align-items: center;
+    margin-left: 5px ;
+    align-items: flex-start;
 }
 
 .searchbar {
     display: flex;
-    background-color: white;
-    margin-right: 20px;
 }
 
 .searchbar input {
-    padding: 10px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    width: auto;
+    padding: 8px;
+    font-weight: bold;
+    box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.25);
     border-radius: 3px;
     border: none;
+    margin-bottom: 0px;
+    margin-top: 5px;
 }
 
 .search-btn button {
-    background-color: black;
+    font-weight: bolder;
+    background-color: white;
     margin-left: 4px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.25);
     border: none;
     border-radius: 10px;
     height: 44px;
-    color: white;
+    color: black;
     padding: 10px 12px;
 }
 
 .random-btn button {
-    background-color: black;
+    font-weight: bolder;
+    background-color: white;
     margin-left: 4px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.25);
     border: none;
     border-radius: 10px;
     height: 44px;
-    color: white;
+    color: black;
     padding: 10px 12px;
 }
 
